[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Weapons/BouncyBomb.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 4.0

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.727273 ), 0.0, 0.644156, 0, 0, Vector2( 0.290323, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -3.01948, 0.0, 0, 0 ]

[node name="BouncyBomb" type="Node2D"]
script = ExtResource( 1 )

[node name="BombGraphic" type="Polygon2D" parent="."]
position = Vector2( 0, -1 )
color = Color( 0.0705882, 0.105882, 0.384314, 1 )
polygon = PoolVector2Array( -3, 11, -8, 7, -10, 2, -9, -3, -7, -6, -2, -9, -2, -12, 2, -12, 2, -9, 7, -7, 9, -3, 10, 3, 8, 6, 6, 9, 3, 11 )

[node name="Fuse" type="Polygon2D" parent="BombGraphic"]
polygon = PoolVector2Array( -1, -12, -1, -15, -4, -19, -2, -21, 1, -16, 1, -12 )

[node name="ShootPoint" type="Position2D" parent="."]
position = Vector2( 50, 0 )
__meta__ = {
"_gizmo_extents_": 5.0
}

[node name="CheckArea" type="Area2D" parent="ShootPoint"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootPoint/CheckArea"]
shape = SubResource( 2 )

[node name="TrajectoryLine" type="Line2D" parent="."]
z_index = -5
width = 8.0
width_curve = SubResource( 1 )
default_color = Color( 1, 1, 1, 1 )
